[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/start_game/start_game.gd" type="Script" id=1]

[node name="StartGame" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -26.0
margin_right = 84.0
margin_bottom = 26.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 168.0
margin_bottom = 52.0
columns = 2

[node name="NicknameLabel" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
text = "Nickname:"

[node name="NicknameEdit" type="LineEdit" parent="GridContainer"]
margin_left = 72.0
margin_right = 168.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="GridContainer"]
margin_top = 33.0
margin_right = 68.0
margin_bottom = 47.0
text = "Port:"

[node name="PortSpinBox" type="SpinBox" parent="GridContainer"]
margin_left = 72.0
margin_top = 28.0
margin_right = 146.0
margin_bottom = 52.0
size_flags_horizontal = 0
max_value = 65535.0
value = 4444.0

[node name="ConfirmButton" type="Button" parent="."]
margin_top = 56.0
margin_right = 168.0
margin_bottom = 76.0
text = "Confirm"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
window_title = "Внимание!"

[connection signal="pressed" from="ConfirmButton" to="." method="_confirm"]
